# pares

./: CMakeLists.txt  LICENSE  README.md
data/: words.txt
include/: board.h  card.h  deck.h  pares.h
src/: board.cpp  card.cpp  deck.cpp  main.cpp  pares.cpp
